# docs/swagger.json
@@ -17,7 +17,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/api/v1/fibonacci/{count}": {
+        "/api/v1/fibonacci/{count}/stream": {
             "get": {
                 "description": "Generates a finite length Fibonacci sequence",
                 "produces": [
@@ -36,7 +36,26 @@
                         "in": "path"
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "415": {
+                        "description": "Unsupported media type",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         },
         "/livez": {
