# internal/routes/fibonacci.go
@@ -3,6 +3,7 @@ package routes
 import (
 	"encoding/json"
 	"net/http"
+	"slices"
 
 	"github.com/gin-gonic/gin"
 	"github.com/majabojarska/fibo/internal/fibonacci"
@@ -34,8 +35,23 @@ type FiboData struct {
 //	@Tags			fibonacci
 //	@Param			count	path	GetFibonacciPathParams	true	"Desired sequence size"
 //	@Produce		event-stream
-//	@Router			/api/v1/fibonacci/{count} [get]
+//	@Failure		400	{string}	string	"Bad request"
+//	@Failure		415	{string}	string	"Unsupported media type"
+//	@Failure		500	{string}	string	"Internal server error"
+//	@Router			/api/v1/fibonacci/{count}/stream [get]
 func GetFibonacci(ctx *gin.Context) {
+	var pathParams GetFibonacciPathParams
+	if err := ctx.ShouldBindUri(&pathParams); err != nil {
+		// Will write status code header
+		ctx.String(http.StatusBadRequest, "Path parameter 'count' must be a non-negative integer\n")
+		return
+	}
+
+	if !slices.Contains(ctx.Request.Header["Accept"], "text/event-stream") {
+		ctx.String(http.StatusUnsupportedMediaType, "User agent must accept content type 'text/event-stream'\n")
+		return
+	}
+
 	writer := ctx.Writer
 	header := writer.Header()
 	header.Set("Content-Type", "text/event-stream")
@@ -44,12 +60,6 @@ func GetFibonacci(ctx *gin.Context) {
 	header.Set("Transfer-Encoding", "chunked")
 	header.Set("X-Accel-Buffering", "no")
 
-	var pathParams GetFibonacciPathParams
-	if err := ctx.ShouldBindUri(&pathParams); err != nil {
-		// Will write status code header
-		ctx.JSON(http.StatusBadRequest, gin.H{})
-		return
-	}
 	if err := writeFibo(writer, pathParams.Count); err != nil {
 		panic(err)
 	}
@@ -83,43 +93,3 @@ func writeFibo(writer gin.ResponseWriter, wantCount int) error {
 
 	return nil
 }
-
-// // writeFibo writes the Fibonacci sequence into the provided writer in a JSON array format.
-// // Writes in chunks, flushing after brackets and each element (and delimiter).
-// func writeFiboOld(writer gin.ResponseWriter, wantCount int) error {
-// 	if _, err := writer.WriteString("["); err != nil {
-// 		return err
-// 	}
-//
-// 	sentCount := 0
-// 	for fiboVal := range fibonacci.FibonacciSeq(wantCount) {
-// 		// Sequence item
-//
-// 		var buf bytes.Buffer
-//
-// 		buf.WriteRune('"')
-// 		buf.WriteString(fiboVal.String())
-// 		buf.WriteRune('"')
-//
-// 		if _, err := writer.WriteString(buf.String()); err != nil {
-// 			return err
-// 		}
-//
-// 		sentCount++
-//
-// 		// Omit delimiter after the last seq item
-// 		if sentCount < wantCount {
-// 			if _, err := writer.WriteString(","); err != nil {
-// 				return err
-// 			}
-// 		}
-//
-// 		writer.(http.Flusher).Flush()
-// 	}
-//
-// 	if _, err := writer.WriteString("]"); err != nil {
-// 		return err
-// 	}
-//
-// 	return nil
-// }
